--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 {
   "image": "ghcr.io/ipspace/netlab/devcontainer:latest",
-
-  "extensions": ["srl-labs.vscode-containerlab"],
+  "customizations": {
+    "vscode": {
+      "extensions": ["srl-labs.vscode-containerlab"]
+    }
+  },
   "hostRequirements": {
     "cpus": 4,
     "memory": "16gb",
